[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Astro-01_GDevelop5-source/astro-01/media/fonts/pixel_font.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="StartLabel" type="Label" parent="."]
margin_left = 440.0
margin_top = 509.0
margin_right = 843.0
margin_bottom = 555.0
custom_fonts/font = SubResource( 1 )
text = "Inserir Ficha"

[node name="CoinLabel" type="Label" parent="."]
margin_left = 984.0
margin_top = 669.0
margin_right = 1387.0
margin_bottom = 715.0
custom_fonts/font = SubResource( 1 )
text = "Fichas:0"

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
